cmake_minimum_required(VERSION 3.0)
project(interview_code VERSION 1.0.0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED True)
add_compile_options(-std=c++14 -g) # -g for debug
#configure_file(src/Config.h.in src/Config.h)


# add_executable(hello_world src/hello_world.cpp)
# add_executable(string_processing src/string_processing.cpp src/utils.h src/utils.cpp)
# add_executable(vector_list src/vector_list.cpp)
# add_executable(class_example src/class_example.cpp)
# add_executable(football src/football.cpp)
# add_executable(factorial src/factorial.cpp)
# add_executable(smart_pointers src/smart_pointers.cpp)
# add_executable(apple src/apple.cpp)
# add_executable(thief src/thief.cpp)
# add_executable(binary_search src/binary_search.cpp)
# add_executable(merge_sort src/merge_sort.cpp)
add_executable(zigzag src/zigzag.cpp)
# add_executable(weird_algorithm src/weird_algorithm.cpp)
# add_executable(missing_number src/missing_number.cpp)
# add_executable(sony src/sony.cpp)
#add_executable(football_maps src/football_maps.cpp)
#target_link_libraries(string_processing 